--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,13 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#friends {
+	margin: 0;
+	list-style: none;
+	.friend {
+		list-style: none;
+		margin: 10px 0;
+		.facebook-picture-square {
+			display: inline-block;
+			width: 50px;
+			height: 50px;
+		}
+	}
+}
