--- a/app/assets/javascripts/facebook.js.coffee.erb
+++ b/app/assets/javascripts/facebook.js.coffee.erb
@@ -13,7 +13,7 @@ jQuery ->
 
 
 window.fbAsyncInit = ->
-  FB.init(appId: '135415809882249', cookie: true)
+  FB.init(appId: gon.global.FACEBOOK_APP_ID, cookie: true)
 
   $('#sign_in').click (e) ->
     e.preventDefault()
