--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<%= include_gon %>
 	<div class="container">
 		<div id="user_nav">
 		  <% if current_user %>
