update cloudsponge domain key

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -15,7 +15,7 @@
       %script{:src => "https://api.cloudsponge.com/address_books.js", :type => "text/javascript"}
       %script{:charset => "utf-8", :type => "text/javascript"}
         var csPageOptions = {
-        domain_key:"UVA3CU4MNENH5X5JKB8Z",
+        domain_key:"JHJRZ3UHXREFTX8HCBJQ",
         textarea_id:"contact_list"
         };
       / Any link with a class="cs_import" will start the import process
