--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,14 +11,13 @@
           = calendar.summary
     .span6
       %h4 Your contacts
-      / Include these scripts to import address books with CloudSponge
-      %script{:src => "https://api.cloudsponge.com/address_books.js", :type => "text/javascript"}
-      %script{:charset => "utf-8", :type => "text/javascript"}
-        var csPageOptions = {
-        domain_key:"JHJRZ3UHXREFTX8HCBJQ",
-        textarea_id:"contact_list"
-        };
-      / Any link with a class="cs_import" will start the import process
-      %a.cs_import Add from Address Book
-      / This textarea will be populated with the contacts returned by CloudSponge
-      %textarea#contact_list{:style => "width:450px;height:82px"}
+      = "#{current_user.contacts.length} Contacts Found" if current_user.contacts
+      %ul
+      = link_to 'Get your contacts', 'contacts/gmail'
+      - if current_user.contacts
+        - current_user.contacts.each do |contact|
+          %li
+            - if contact[:name].present?
+              = "<#{contact[:name]}> #{contact[:email]}"
+            - else
+              = contact[:email]
