--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,7 +5,7 @@
       - if current_user
         Signed in as
         = succeed "" do
-          %strong= current_user.name
-        = link_to "Sign out", signout_path, id: "sign_out"
+          %strong{style: "margin-right: 20px;"}= current_user.name
+        = link_to "Sign out", signout_path, id: "sign_out", class: "google_sign_in"
       - else
-        = link_to "Sign in with Google", "/auth/google_oauth2"
+        = link_to "Sign in with Google", "/auth/google_oauth2", class: "google_sign_in"
