some fixes and style improvements;

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,55 +1,5 @@
-- if current_user
-  %h1.page-title 
-    .container
-      Dashboard
-
 .container
   - if current_user
-    / %ul
-    /   - @events.data.items.each do |event|
-    /     %li
-    /       = event.summary
-    /       = event.start['date']
-    /       = event.start['dateTime']
-    /       = " to "
-    /       = event.end['date']
-    /       = event.end['dateTime']
-    .row
-      .span4
-        %h4 Connect Your Calendars
-        .well.well-small
-          Which calendars should we use to determine your availability?
-        %ul
-        = form_tag '/update_calendars' do |f|
-          = hidden_field_tag "calendars[]", nil
-          - @calendar_list.data.items.each do |calendar|
-            %label.checkbox
-              = check_box_tag "calendars[]", calendar.id, current_user.calendars.where(calendar_id: calendar.id).length > 0
-              = calendar.summary
-          = submit_tag "Save", class: "btn btn-primary"
-      .span4
-        %h4 Select Activities
-        .well.well-small
-          What activities would you like to schedule with your friends?
-        %ul
-        = form_for current_user do |f|
-          = hidden_field_tag 'user[activity_ids][]', nil
-          - @activities.each do |activity|
-            %label.checkbox
-              = check_box_tag "user[activity_ids][]", activity.id, current_user.activity_ids.include?(activity.id), id: dom_id(activity)
-              = activity.name
-          = submit_tag "Save", class: "btn btn-primary"
-      .span4
-        %h4 Invite Friends
-        .well.well-small
-          Invite your friends to start planning activities together.
-        %ul
-        - if current_user.contacts.length > 0
-          = "#{current_user.contacts.length} Contacts"
-          = link_to 'Update', 'contacts/gmail'
-          %br
-          %input.span4{"data-items" => "4", "data-provide" => "typeahead", "data-source" => "#{current_user.contacts.map(&:email)}", :style => "margin: 0 auto;", :type => "text"}/
-        - else
-          = link_to 'Get your Gmail contacts', 'contacts/gmail'
-        = text_area_tag :message, "Hello friend!  Join Jupiter now!", class: "span4"
-        = submit_tag "Send Invites", class: "btn btn-primary"
+    = render 'dashboard'
+  - else
+    = render 'landing'
