--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -18,3 +18,18 @@
 		}
 	}
 }
+.cta {
+	margin: 30px 0 20px 0;
+	.red {
+		background: #E04F1A;
+		color: #fff;
+		font-size: 15px;
+		padding: 15px 25px;
+		@include border-radius(3px);
+		&:hover {
+			text-decoration: none;
+			color: #fff;
+			box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
+		}
+	}
+}
