--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -9,3 +9,7 @@
         = link_to "Sign out", signout_path, id: "sign_out", class: "google_sign_in"
       - else
         = link_to "Sign in with Google", "/auth/google_oauth2", class: "google_sign_in"
+- if current_user
+  %h1.page-title 
+    .container
+      Dashboard
