--- a/app/views/home/_landing.html.haml
+++ b/app/views/home/_landing.html.haml
@@ -3,6 +3,10 @@
 		.well.center{style: "margin-top: 30px;"}
 			%h1 You want to get together with friends.  
 			%h2 Let us plan it!
+			- if @invite
+				%p
+					Sign up with Google to start planning activities with 
+					= @invite.sender.name
 			%div.cta
 				= link_to "Get Started", "/auth/google_oauth2", class: 'red'
 .row
