--- a/app/views/home/_dashboard.html.haml
+++ b/app/views/home/_dashboard.html.haml
@@ -34,7 +34,7 @@
       = link_to 'Get your Gmail contacts', 'contacts/gmail', class: "btn btn-small", style: "margin-bottom: 10px;"
     %br
     = simple_form_for @invitation do |f|
-      = f.input :recipient_email, label: false, placeholder: "Friend's email"
+      = f.input :recipient_email, label: false, placeholder: "Friend's email", input_html: {class: 'span4', autocomplete: "off", data: {provide: 'typeahead', source: @contacts}}
       = f.submit "Send Invitation", class: "btn btn-primary"
 
     %h5 Your Sent Invitations
