minor styling change

--- a/app/views/home/_dashboard.html.haml
+++ b/app/views/home/_dashboard.html.haml
@@ -48,4 +48,4 @@
               %span.label.label-info.pull-right Pending
     - else
       .well
-        %p You have not sent any invitations yet!
+        You have not sent any invitations yet!
