add label for signed up users

--- a/app/views/home/_dashboard.html.haml
+++ b/app/views/home/_dashboard.html.haml
@@ -45,7 +45,10 @@
             %td
               = invitation.recipient_email
             %td
-              %span.label.label-info.pull-right Pending
+              - if User.find_by_email(invitation.recipient_email)
+                %span.label.label-info.pull-right Pending
+              - else
+                %span.label.label-success.pull-right Signed Up!
     - else
       .well
         You have not sent any invitations yet!
