--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -33,3 +33,18 @@
 		}
 	}
 }
+
+.invite-panel {
+	.title {
+		background: #f1f1f1;
+		margin: -5px -5px 10px -5px;
+		padding: 5px;
+		font-size: 15px;
+		font-weight: bold;
+	}
+	border: 1px solid #f1f1f1;
+	padding: 5px;
+	margin-bottom: 15px;
+	@include border-radius(5px);
+	@include box-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+}
