--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -37,14 +37,14 @@
 .invite-panel {
 	.title {
 		background: #f1f1f1;
-		margin: -5px -5px 10px -5px;
-		padding: 5px;
-		font-size: 15px;
-		font-weight: bold;
+		margin: -9px -9px 10px -9px;
+		padding: 9px;
+		border-bottom: 1px solid #e3e3e3;
+		h4 { margin-top: 0; }
 	}
 	border: 1px solid #f1f1f1;
-	padding: 5px;
+	padding: 9px;
 	margin-bottom: 15px;
-	@include border-radius(5px);
+	@include border-radius(3px);
 	@include box-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
