--- a/app/views/home/_dashboard.html.haml
+++ b/app/views/home/_dashboard.html.haml
@@ -1,7 +1,7 @@
 .row{style: 'margin-top: 30px;'}
   .span4
     .well.well-small
-      %h4{style: 'margin-top: 0;'} Link Your Calendars
+      %h4 Link Your Calendars
       Which calendars should we use to determine your availability?
     %ul
     = form_tag '/update_calendars' do |f|
@@ -13,7 +13,7 @@
       = submit_tag "Save", class: "btn btn-primary"
   .span4
     .well.well-small
-      %h4{style: 'margin-top: 0;'} Choose Activities
+      %h4 Choose Activities
       What activities would you like to schedule with your friends?
     %ul
     = form_for current_user do |f|
@@ -29,22 +29,23 @@
     /   Invite your friends to start planning activities together.
     
     %div.invite-panel
-      .title
+      .well.well-small
         %h4 Invite Friends
-        %p{style: "margin: 0;"} Invite your friends to start planning activities together.
-      = image_tag 'gmail.png', class: 'pull-left', style: 'margin-right: 5px;'
-      - unless current_user.contacts.nil?
-        %span{style: "padding-bottom: 10px; line-height: 15px; float: left;"}
-          = "#{current_user.contacts.length} Contacts Imported"
-          = link_to 'Refresh', 'contacts/gmail'
-      - else
-        %span{style: "padding-bottom: 10px; line-height: 15px; float: left;"}
-          = link_to 'Import Gmail contacts', 'contacts/gmail', class: "btn btn-small", style: "margin-bottom: 10px;"
-      %br
-      = simple_form_for @invitation, html: { style: 'margin: 0' } do |f|
-        .row-fluid
-          = f.input :recipient_email, label: false, placeholder: "Friend's email", input_html: {class: 'span12', style: 'margin: 0;', autocomplete: "off", data: {provide: 'typeahead', source: @contacts}}
-          = f.submit "Send Invitation", class: "btn btn-primary pull-right"
+        Invite your friends to start planning activities together.
+      %div{style: "padding: 9px;"}
+        = image_tag 'gmail.png', class: 'pull-left', style: 'margin-right: 5px;'
+        - unless current_user.contacts.nil?
+          %span{style: "padding-bottom: 10px; line-height: 15px; float: left;"}
+            = "#{current_user.contacts.length} Contacts Imported"
+            = link_to 'Refresh', 'contacts/gmail'
+        - else
+          %span{style: "padding-bottom: 10px; line-height: 15px; float: left;"}
+            = link_to 'Import Gmail contacts', 'contacts/gmail', class: "btn btn-small", style: "margin-bottom: 10px;"
+        %br
+        = simple_form_for @invitation, html: { style: 'margin: 0' } do |f|
+          .row-fluid
+            = f.input :recipient_email, label: false, placeholder: "Friend's email", input_html: {class: 'span12', style: 'margin: 0;', autocomplete: "off", data: {provide: 'typeahead', source: @contacts}}
+            = f.submit "Send Invitation", class: "btn btn-primary pull-right"
       .clearfix
 
     %h5 Your Sent Invitations
