add some css transitions

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -42,8 +42,12 @@
 	margin-bottom: 15px;
 	@include border-radius(3px);
 	@include box-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+	@include transition(box-shadow 0.2s);
 	.well {
 		margin: 0px;
 		@include border-radius(3px 3px 0 0);
+	}
+	&:hover {
+		@include box-shadow(0px 0px 5px #00a2ff);
 	}
 }
