--- a/app/views/home/invites.html.haml
+++ b/app/views/home/invites.html.haml
@@ -8,45 +8,47 @@
 .container
   .row{style: 'margin-top: 30px;'}
     .span12
-      %div.invite-panel
-        .well.well-small
-          %h4 Invite Friends
-          Invite your friends to start planning activities together.
-        %div{style: "padding: 9px;"}
-          = image_tag 'gmail.png', class: 'pull-left', style: 'margin-right: 5px;'
-          - unless current_user.contacts.nil?
-            %span{style: "padding-bottom: 10px; line-height: 15px; float: left;"}
-              = "#{current_user.contacts.length} Contacts Imported"
-              = link_to 'Refresh', 'contacts/gmail'
-          - else
-            %span{style: "padding-bottom: 10px; line-height: 15px; float: left;"}
-              = link_to 'Import Gmail contacts', 'contacts/gmail', class: "btn btn-small", style: "margin-bottom: 10px;"
-          %br
-          = simple_form_for @invitation, html: { style: 'margin: 0' } do |f|
-            .row-fluid
-              = f.input :recipient_email, label: false, placeholder: "Friend's email", input_html: {class: 'span12', style: 'margin: 0;', autocomplete: "off", data: {provide: 'typeahead', source: @contacts}}
-              = f.submit "Send Invitation", class: "btn btn-primary pull-right"
-        .clearfix
+      / %div.invite-panel
+      /   .well.well-small
+      /     %h4 Invite Friends
+      /     Invite your friends to start planning activities together.
+      /   %div{style: "padding: 9px;"}
+      /     = image_tag 'gmail.png', class: 'pull-left', style: 'margin-right: 5px;'
+      /     - unless current_user.contacts.nil?
+      /       %span{style: "padding-bottom: 10px; line-height: 15px; float: left;"}
+      /         = "#{current_user.contacts.length} Contacts Imported"
+      /         = link_to 'Refresh', 'contacts/gmail'
+      /     - else
+      /       %span{style: "padding-bottom: 10px; line-height: 15px; float: left;"}
+      /         = link_to 'Import Gmail contacts', 'contacts/gmail', class: "btn btn-small", style: "margin-bottom: 10px;"
+      /     %br
+      /     = simple_form_for @invitation, html: { style: 'margin: 0' } do |f|
+      /       .row-fluid
+      /         = f.input :recipient_email, label: false, placeholder: "Friend's email", input_html: {class: 'span12', style: 'margin: 0;', autocomplete: "off", data: {provide: 'typeahead', source: @contacts}}
+      /         = f.submit "Send Invitation", class: "btn btn-primary pull-right"
+      /   .clearfix
       .tab-content{style: 'border: 1px solid #f1f1f1;'}
         .tab-pane.active#invite-list
           %div{style: "padding: 5px;"}
             .row-fluid
               .span4
-                = link_to "Import Contacts", "#import-contacts", data: {toggle: 'tab'}, class: 'btn'
+                - button_text = current_user.contacts.nil? ? "Import Contacts" : "Imported Contacts"
+                = link_to button_text, "#import-contacts", data: {toggle: 'tab'}, class: 'btn'
               .span4.center{style: 'line-height: 30px; font-weight: bold;'}
                 Invite List
           %div{style: "padding: 5px; background: #F9F9F9; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc;"}
             .alert.alert-error#invalid-email-error-message{style: 'margin-bottom: 5px; display: none;'} Please enter a valid email address
-            .input-append{style: "margin: 0;"}
-              = text_field_tag "email", '', class: "span10", id: "invite-email-field", placeholder: "Friend's Email", style: "margin: 0;"
-              %button.btn#invite-email-button
-                Add Friend
+            = form_tag "#", id: "invite-email-form", remote: true, class: "no-margin" do
+              .input-append{style: "margin: 0;"}
+                = text_field_tag "email", '', class: "span10", id: "invite-email-field", placeholder: "Friend's Email", style: "margin: 0;"
+                = submit_tag "Add Friend", class: 'btn', id: "invite-email-button"
           %div#invite-list
             .some-content-related-div
               .slimscroll
                 .well#no-invites.center{style: 'margin: 20px; color: #999;'}
                   %h3 Add friends by email or import your contacts to get started!
-                %table.table.table-striped
+                = form_tag "/invitations/batch_create", id: "invites-form" do
+                  %table.table.table-striped
         .tab-pane#import-contacts
           %div{style: "padding: 5px;"}
             .row-fluid
@@ -83,6 +85,7 @@
                         %td.name= contact[:name]
                         %td.email= contact[:email]
                         %td.button-cell{style: 'width: 80px;'}= link_to 'Add to List', "#", class: 'btn btn-mini invite-button'
+      = link_to "Send Invitations", "#", class: "btn btn-primary pull-right", id: "send-invites"
     / .span4
     /   %h5 Your Sent Invitations
     /   - if @sent_invitations.length > 0
