--- a/app/views/home/invites.html.haml
+++ b/app/views/home/invites.html.haml
@@ -53,7 +53,7 @@
           %div{style: "padding: 5px;"}
             .row-fluid
               .span4
-                = link_to "Invite List", "#invite-list", data: {toggle: 'tab'}, class: 'btn'
+                = link_to image_tag('invite-list-btn.png'), "#invite-list", data: {toggle: 'tab'}
               .span4.center{style: 'line-height: 30px; font-weight: bold;'}
                 Import Contacts
               .span4
