fix row height issue

--- a/app/views/home/invites.html.haml
+++ b/app/views/home/invites.html.haml
@@ -52,7 +52,7 @@
         .tab-pane#import-contacts
           %div{style: "padding: 5px;"}
             .row-fluid
-              .span4
+              .span4{style: "height: 30px;"}
                 = link_to "", "#invite-list", id: "invite-btn", data: {toggle: 'tab'}
               .span4.center{style: 'line-height: 30px; font-weight: bold;'}
                 Import Contacts
